# ar5iv-editor

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: release.yml
crates/ar5iv-editor-protocol/: Cargo.toml
crates/ar5iv-editor-protocol/src/: lib.rs
crates/ar5iv-editor-server/: Cargo.toml  build.rs
crates/ar5iv-editor-server/src/: archive.rs  config.rs  convert.rs  error.rs  examples.rs  files.rs  lib.rs  lsp_pool.rs  main.rs  quota.rs  routes.rs  session.rs  templates.rs  ws.rs
crates/ar5iv-editor-server/templates/: about.html  base.html  editor.html  help.html  index.html  schemas.html  upload.html  validate.html  vscode.html
crates/ar5iv-editor-server/tests/: cleanup_guarantee.rs  files_round_trip.rs  lsp_pool_e2e.rs  search_paths_de_risk.rs  validate_mime_matrix.rs  ws_graphics_round_trip.rs  ws_pool_e2e.rs  ws_round_trip.rs
deploy/: Dockerfile  PLAN.md  README.md  anubis.yaml  build-and-push.sh  cloud-demo.md  cpu-sanity-check.sh  docker-compose.local.yml  docker-compose.yml  fly.toml  local-test.md  release.sh  validator.Dockerfile  vultr-bootstrap.sh
docs/: FileUI.md  VSCODE_PREVIEW.md
examples/: README.md  _index.json
examples/arxiv-1910-06709/: main.tex
examples/babel/: main.tex
examples/boxes/: main.tex
examples/calculus/: main.tex
examples/color/: main.tex
examples/equations/: main.tex
examples/narrative/: main.tex
examples/obfuscated/: main.tex
examples/planetmath/: main.tex
examples/pstricks-graphics/: main.tex
examples/rhai-bindings/: example.sty.rhai  main.tex
examples/tables/: main.tex
examples/tikz-ac-voltage/: main.tex
examples/tikz-basic/: main.tex
examples/tikz-rotated-triangle/: main.tex
examples/turing-machine/: main.tex
examples/unicode/: main.tex
examples/wiki-syntax/: main.tex
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend-core/: convert.ts  diagnostics.ts  forward-sync.ts  host.ts  index.ts  preview.ts  recover.ts  reverse-sync.ts  sourcepos.ts
frontend/public/css/: ar5iv-fonts.css  ar5iv.css
frontend/src/: editor.ts  examples.ts  files.ts  idiomorph.d.ts  main.ts  preview.ts  resizers.ts  session.ts  styles.css  toast.ts  upload.ts  validate.ts  ws.ts
tools/: make-server-release.sh
vscode-extension/: .vscodeignore  LICENSE  esbuild.desktop.js  esbuild.preview.js  esbuild.web.js  package-lock.json  package.json  tsconfig.json
vscode-extension/media/: preview.css
vscode-extension/scripts/: fetch-vscode-web.mjs  test_lsp_integration.js
vscode-extension/src/desktop/: binaryDownload.ts  executableProvider.ts  extension.ts  managedServer.ts  nativeProvider.ts  runtime.ts
vscode-extension/src/shared/: app.ts  conversionProvider.ts  conversionTypes.ts  debounce.ts  diagnostics.ts  documentModel.ts  hostedProvider.ts  previewPanel.ts  runtime.ts  sourceSync.ts
vscode-extension/src/types/: idiomorph.d.ts
vscode-extension/src/web/: runtime.ts
vscode-extension/src/webview/: preview.ts
