[workspace]
resolver = "2"
members = [
    "crates/ar5iv-editor-server",
    "crates/ar5iv-editor-protocol",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dginev/ar5iv-editor"

[workspace.dependencies]
ar5iv-editor-protocol = { path = "crates/ar5iv-editor-protocol" }

axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }

askama = "0.14"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

thiserror = "2"
anyhow = "1"

num_cpus = "1"
futures-util = "0.3"
