[package]
name = "ar5iv-editor-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Axum + WebSocket server hosting the ar5iv-editor LaTeX web editor."

[lib]
name = "ar5iv_editor"
path = "src/lib.rs"

[[bin]]
name = "ar5iv-editor"
path = "src/main.rs"

[dependencies]
ar5iv-editor-protocol = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }

askama = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

num_cpus = { workspace = true }
futures-util = { workspace = true }

# The real conversion engine — published on crates.io as `latexml`:
#   latexml = { version = "0.5", features = ["token-locators"] }
# Pinned to a path dep here so the editor tracks the local dev tree: the
# crates.io release must carry the `token-locators` feature (added in the
# source-map work, not in the published 0.0.2 yet) — switch to the version dep
# above once a release ships it. `latexml` (== latexml_oxide) uses Rc / TLS /
# globals throughout, so we run all conversions on a single dedicated 256 MB-stack
# worker thread (see `convert.rs`). Adjust the path if the local checkout lives
# elsewhere.
#
# `token-locators` is REQUIRED here (not optional): the editor's whole point is
# accurate source↔preview sync, which depends on the precision source-map
# locators (content-exact construct spans, alignment, math, bibliography). The
# feature propagates across the latexml-oxide crate graph, so requesting it on
# `latexml` enables it for `latexml_core`/engine/etc. via feature unification.
# Without it, conversions fall back to the heuristic (eating-disorder) locators.
latexml = { path = "../../../latexml-oxide/latexml_oxide", features = ["token-locators"] }
latexml_core = { path = "../../../latexml-oxide/latexml_core" }
latexml_post = { path = "../../../latexml-oxide/latexml_post" }
log = "0.4"

# 256-bit OsRng tokens for UserId / SessionId, base64url-encoded — see
# `session.rs` and `docs/FileUI.md`. `getrandom` already pulls OsRng in
# transitively, so the cost is essentially the small `rand_core` shim.
rand = { version = "0.9", default-features = false, features = ["std", "std_rng", "os_rng"] }
base64 = "0.22"

# Embed the top-level `examples/` tree into the server binary, mirroring
# the frontend's Vite-glob over the same directory.
include_dir = "0.7"

# Archive import (ZIP + tar.gz) and ZIP export. See `archive.rs` and
# `docs/FileUI.md` "Archive upload — ZIP and tar.gz".
zip = { version = "5", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"
sha2 = "0.10"
regex = "1"

[dev-dependencies]
tokio-tungstenite = "0.24"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
filetime = "0.2"
zip = { version = "5", default-features = false, features = ["deflate"] }
